--- a/index.html
+++ b/index.html
@@ -397,7 +397,11 @@ document.addEventListener('DOMContentLoaded', function () {
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 <div class="text-center mb-12">
 <h2 class="text-3xl font-bold text-blue-600 mb-4">About Dynamic Innovators</h2>
-<p class="text-gray-600 max-w-3xl mx-auto">AICRA approved robotics education provider since 2015</p>
+<p class="text-gray-600 max-w-3xl mx-auto">Dynamic Innovators is a team of four passionate minds — Shahid Sheikh, Aaryan Yadav, Tathya Mehta, and Saket Singh.
+
+Proudly represented India at the World Robotics Championship. As founders of the AICRA-approved Dynamic Innovators Robotics Club.
+
+ We are on a mission to equip young minds with skills in robotics, innovation, and AI, transforming classrooms into hubs of future tech leadership.</p>
 </div>
 <div class="grid md:grid-cols-3 gap-8">
 <div class="bg-blue-50 p-6 rounded-lg shadow-md">
