--- a/index.html
+++ b/index.html
@@ -611,17 +611,20 @@ Proudly represented India at the World Robotics Championship. As founders of the
 </li>
 <li class="flex items-center">
 <i class="fas fa-phone-alt mr-2 text-blue-400"></i>
-<span>+91 8329558396</span>
+<span>
++91 8329558396 
++91 86573 43020
+</span>
 </li>
 <li class="flex items-center">
 <i class="fas fa-envelope mr-2 text-blue-400"></i>
-<span>info@dynamicinnovators.com</span>
+<span>dynamicinnovators.roboticsclub@gmail.com</span>
 </li>
 </ul>
 </div>
 </div>
 <div class="border-t border-gray-800 pt-6 flex flex-col md:flex-row justify-between items-center">
-<p class="text-gray-400 text-sm mb-4 md:mb-0">© 2025 Dynamic Innovators. All rights reserved.</p>
+<p class="text-gray-400 text-sm mb-4 md:mb-0">© 2023 Dynamic Innovators. All rights reserved.</p>
 <div class="flex space-x-6">
 </div>
 </div>
